[project]
name = "test-case"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "isort>=6.0.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
